--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello, world!
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>pinmacaroon</title>
+</head>
+<body>
+    <h1>hello there!</h1>
+    <p>this is my little corner of the web, soon to be a real page!</p>
+</body>
+</html>
