--- a/squidsmp/index.html
+++ b/squidsmp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>squid server</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="./index.js"></script>
 </head>
 
 <body>
@@ -13,7 +14,13 @@
         <a href="about:blank">info</a>
     </div>
     <div class="page">
-        
+        <h1>squid server</h1>
+        <h2>the most fun you can have on a server™</h2>
+        <p>squid server is a <strong>fabricmc modded 1.20.4</strong> minecraft multiplayer server,
+            made by <i>boxed</i> and <i>pin</i>.</p>
+    </div>
+    <div class="page" id="statsdiv">
+        <h2>stats</h2>
     </div>
 </body>
 
