--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>pinboard: index</title>
+    <title>pinboard: about & contact</title>
     <link rel="stylesheet" href="/res/index.css">
     <link rel="stylesheet" href="/res/famfamfam-silk.css">
 </head>
@@ -11,17 +11,20 @@
     <div id="navigation">
         <p>
         <img src="/res/pin.png" height="88" width="88" style="vertical-align: middle;">
-        <span>current page: <b>index</b> <img class="famfamfam-silk emoticon_waii" src="/res/blank.png"></img> | pinboard navigation: </span>
+        <span>current page: <b>about & contact</b> <img class="famfamfam-silk emoticon_waii" src="/res/blank.png"></img> | pinboard navigation: </span>
         <a href="/index.html">pindex</a>
         <a href="/pages/about.html">about & contact</a>
         </p>
     </div>
     <div id="maincontent">
-        <h1>hi there!</h1>
-        <p>im <b>pin</b>, and this is my epic site! wanna know who i am? take a peek at <a href="/pages/about.html">the about page</a>!</p>
-        <h2>looking for my projects?</h2>
-        <p>look at my <a href="/pages/stuff.html">stuff page</a>!</p>
-        <img src="/res/attachment-7.gif" style="width: 300px; background-color: black;">
+        <p>im <b>pin</b> and my misson on the internet is to do silly things and make friends!</p>
+        <hr>
+        <p>contact me:</p>
+        <ul>
+            <li>discord: pridalkomark#9890</li>
+            <li>steam: <a href="https://steamcommunity.com/id/pinmac/">pinmac</a></li>
+            <li>youtube (i dont do anything there lmao): <a href="https://www.youtube.com/@pinmacaroon">pinmacaroon</a></li>
+        </ul>
     </div>
 </body>
 <!--<script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Markdown-Tag/markdown-tag-commonmark.js"></script> -->
