--- a/index.html
+++ b/index.html
@@ -12,54 +12,71 @@
                 <img
                     src="/res/pfp_nikotol_xoxo.png"
                     height="150"
-                    style="vertical-align: middle"
-                    onclick="pinclick()"
+                    style="vertical-align: middle; cursor: pointer"
+                    onclick="messagebox('haii >w<')"
                     id="pinimg"
                 >
                 <span style="font-size: 18pt; font-weight: 700">pin</span>
-                <span style="margin-left: 6pt">
+                <span style="margin-left: 16pt">
                     <a href="/index.html">index</a>
                 </span>
                 <span style="margin-left: 6pt">
-                    <a href="/contact.html">contact</a>
+                    <a href="/contact.html">contacts</a>
                 </span>
             </p>
         </div>
         <div id="cmain" class="center">
             <h1>hello there!</h1>
             <p>
-                this is my little corner of the web. you can find some contacts,
-                project and other stuff here! (also finally made a site that
-                doesnt look like its straight from the 90's)
+                this is my little corner of the web. you can find some <b
+                >contacts</b>, <b>projects</b> and other stuff here! (also
+                finally made a site that doesnt look like its straight from the
+                90's)
             </p>
+            <p>he/they</p>
             <hr>
+            <h2>my interests</h2>
+            <ul>
+                <li>gaming</li>
+                <li>programming B-&rpar;</li>
+                <li>listening to music</li>
+                <li>trying to up my drawing game</li>
+            </ul>
+            <h3>the games i play</h3>
+            <ul>
+                <li
+                    onclick="messagebox('<img src=\'https:\/\/media.tenor.com/LwfpUq5ZagUAAAAj/spin-it-dancing.gif\'>')"
+                >
+                    team fortress 2
+                </li>
+                <li>minecraft</li>
+                <li>boblox</li>
+            </ul>
+            <h3>the things i make</h3>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Libero, nostrum.
+                    <a
+                        href="https://modrinth.com/user/pinmacaroon"
+                        target="_blank"
+                    >
+                        minecraft mods (with friends) &nearrow;
+                    </a>
                 </li>
                 <li>
-                    <ul>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                    </ul>
+                    <a href="/origins/origins.html">
+                        minecraft origins mod datapacks (comms open)
+                    </a>
                 </li>
                 <li>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Libero, nostrum.
+                    <a
+                        href="https://github.com/pinmacaroon"
+                        target="_blank"
+                    >
+                        silly stuff on github &nearrow;
+                    </a>
                 </li>
-                <li>
-                    <ul>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, odit.</li>
-                    </ul>
-                </li>
+                <li>discord bots</li>
+                <li>misc tools to make my life easier :P</li>
             </ul>
         </div>
         <div id="messagebox">
