--- a/origins/origins.html
+++ b/origins/origins.html
@@ -57,7 +57,7 @@
             </p>
             <h2>my public origins</h2>
             <p>
-                this list will be ever expanding, so maybe keep an eye on this
+                this list will be ever expanding because of me collecting my past work, so maybe keep an eye on this
                 page. some links might not be available, because modrinth's
                 reviews take a while
             </p>
