--- a/origins/origins.html
+++ b/origins/origins.html
@@ -70,6 +70,37 @@
                     datapack. (origin)
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a
+                        href="https://modrinth.com/datapack/birdian"
+                        target="_blank"
+                    >Birdian &nearrow;</a>: Birdian (small elytrian) origins 
+                    mod datapack
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a
+                        href="https://modrinth.com/datapack/pillager"
+                        target="_blank"
+                    >Pillager Origin &nearrow;</a>: Pillager origins datapck 
+                    for 1.20.4.
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a
+                        href="https://modrinth.com/datapack/catboy"
+                        target="_blank"
+                    >Catboy &nearrow;</a>: Very cursed shitpost origin 
+                    datapack, please smite me
+                </li>
+            </ul>
+            <h2>comms</h2>
+            <p>want an origin for yourself? cant make one? i got you stranger!
+                i can make one for you! just message me on discord so we can 
+                discuss details!</p>
         </div>
         <div id="messagebox">
             <span id="messageboxtext"></span>
