--- a/origins/origins.html
+++ b/origins/origins.html
@@ -97,6 +97,14 @@
                     datapack, please smite me
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a
+                        href="https://modrinth.com/datapack/earthian"
+                        target="_blank"
+                    >Earthian &nearrow;</a>: Earth themed origins datapack
+                </li>
+            </ul>
             <h2>comms</h2>
             <p>want an origin for yourself? cant make one? i got you stranger!
                 i can make one for you! just message me on discord so we can 
