--- a/origins/origins.html
+++ b/origins/origins.html
@@ -41,7 +41,7 @@
                     href="https://fabricmc.net/"
                     target="_blank"
                 >fabric loader &nearrow;</a> usually on the <b>1.20.1 to
-                    1.20.4</b> game versions. (version and dependencies varies
+                    1.20.4</b> game versions. (version and dependencies vary
                 by datapck, unless otherwise noted)
             </p>
             <p>
