--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                     </a>
                 </li>
                 <li>discord bots</li>
+                <li>
+                    <a
+                        href="/mcfetch/legacy/index.html"
+                        target="_blank"
+                    >
+                        mcfetch: minecraft server info fetcher &nearrow;
+                    </a>
+                </li>
                 <li>misc tools to make my life easier :P</li>
             </ul>
         </div>
