--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                         mcfetch: minecraft server info fetcher &nearrow;
                     </a>
                 </li>
+                <li>
+                    <a
+                        href="/skinfetch/index.html"
+                        target="_blank"
+                    >
+                        skinfetch: minecraft skin fetcher &nearrow;
+                    </a>
+                </li>
                 <li>misc tools to make my life easier :P</li>
             </ul>
         </div>
