--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 </li>
                 <li>misc tools to make my life easier :P</li>
             </ul>
+            <img src="/res/petpet.gif" id="secret_gif">
         </div>
         <div id="messagebox">
             <span id="messageboxtext"></span>
