--- a/origins/origins.html
+++ b/origins/origins.html
@@ -5,6 +5,13 @@
         <link rel="stylesheet" href="/res/index.css">
         <link rel="icon" type="image/png" href="/res/favicon.png">
         <script src="/res/index.js"></script>
+        
+        <meta property="og:url" content="https://pinmacaroon.github.io/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="pin's site">
+        <meta property="og:description" content="hello friend, visit my little corner of the net!">
+        <meta property="og:image" content="https://pinmacaroon.github.io/res/pfp_nikotol_xoxo.png">
+        <meta name="theme-color" content="#e8a1ffv">
     </head>
     <body>
         <div class="center">
