--- a/index.html
+++ b/index.html
@@ -2,24 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="shortcut icon" href="resources/macaroon.png" type="image/png">
-    <style>
-        body {
-            font-family: monospace;
-            font-size: 16px;
-            line-height: 16px;
-            background-image: url("resources/back.png");
-            background-size: 80px;
-            background-repeat: space repeat;
-            background-color: #4C3B63;
-        }
-    </style>
+    <link rel="shortcut icon" href="/resource/macaroon.png" type="image/png">
+    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="/style/famfamfam-silk.css">
 </head>
 
 <body>
+    <nav>
+        e
+        e
+        e
+        e
+        e
+        e
+    </nav>
+    <header>
+        <img src="/resource/placeholder_HELLO_REPLACE_ME_PLS.png" alt="TODO" id="header_banner_image">
+    </header>
+    <main>
+        <div class="box_holder">
+            <div class="box">
+                <div class="titlebar">
+                    <div class="famfamfam-silk house"></div> lorem1
+                </div>
+                <div class="main">
+                    <h1>header 1</h1>
+                    <p>this paragraph belongs to the 1th header</p>
+                    <h2>header 2</h2>
+                    <p>this paragraph belongs to the 2th header</p>
+                    <h3>header 3</h3>
+                    <p>this paragraph belongs to the 3th header</p>
+                    <h4>header 4</h4>
+                    <p>this paragraph belongs to the 4th header</p>
+                    <h5>header 5</h5>
+                    <p>this paragraph belongs to the 5th header</p>
+                    <h6>header 6</h6>
+                    <p>this paragraph belongs to the 6th header</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="titlebar">
+                    <div class="famfamfam-silk house"></div> lorem1
+                </div>
+                <div class="main">
+                    <p>normal <b>bold</b> <i>italic</i> <u>underline</u> <s>strike-trough</s>
+                        <small>small</small>
+                    </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quas repellendus
+                        dolorum
+                        tempore placeat sequi, at, vel exercitationem minima ab ipsum nam odit sunt facilis
+                        eveniet
+                        neque beatae? Architecto sunt accusantium tenetur ab error excepturi, nulla numquam quia
+                        ipsa earum tempora autem amet neque id dignissimos recusandae illum harum praesentium,
+                        aliquam voluptas temporibus sint illo officiis vitae! Nemo asperiores vero, quidem
+                        pariatur
+                        repellat ducimus iure. Quae, eaque voluptatibus et ipsam facere quos molestias tempora
+                        illo
+                        enim praesentium cupiditate laborum assumenda nisi. Possimus, commodi eveniet. Magni
+                        necessitatibus consequuntur aspernatur, dicta tempore commodi modi illum quo officiis
+                        laborum iste praesentium explicabo cupiditate?</p>
+                </div>
+
+
+            </div>
+        </div>
+    </main>
 
 </body>
 
