--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <link rel="shortcut icon" href="/resource/macaroon.png" type="image/png">
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="/style/famfamfam-silk.css">
+    <script src="/script/main.js"></script>
+    <script src="/script/jquery.js"></script>
 </head>
 
 <body>
     <nav>
-        e
-        e
-        e
-        e
-        e
-        e
+        TODO
     </nav>
     <header>
         <img src="/resource/placeholder_HELLO_REPLACE_ME_PLS.png" alt="TODO" id="header_banner_image">
@@ -26,44 +23,20 @@
         <div class="box_holder">
             <div class="box">
                 <div class="titlebar">
-                    <div class="famfamfam-silk house"></div> lorem1
+                    <div class="famfamfam-silk house"></div> welcome!
                 </div>
                 <div class="main">
-                    <h1>header 1</h1>
-                    <p>this paragraph belongs to the 1th header</p>
-                    <h2>header 2</h2>
-                    <p>this paragraph belongs to the 2th header</p>
-                    <h3>header 3</h3>
-                    <p>this paragraph belongs to the 3th header</p>
-                    <h4>header 4</h4>
-                    <p>this paragraph belongs to the 4th header</p>
-                    <h5>header 5</h5>
-                    <p>this paragraph belongs to the 5th header</p>
-                    <h6>header 6</h6>
-                    <p>this paragraph belongs to the 6th header</p>
+                    <h1>welcome</h1>
+                    <p>welcome, digital traveler, to my humble dwelling in the world of the <b class="blink">internet</b>!</p>
+                    <p>here you will be able to find out about me, what i do, what im interested in and how to get in touch with me!</p>
                 </div>
             </div>
             <div class="box">
                 <div class="titlebar">
-                    <div class="famfamfam-silk house"></div> lorem1
+                    <div class="famfamfam-silk picture"></div> shitpost of the day&trade;
                 </div>
                 <div class="main">
-                    <p>normal <b>bold</b> <i>italic</i> <u>underline</u> <s>strike-trough</s>
-                        <small>small</small>
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quas repellendus
-                        dolorum
-                        tempore placeat sequi, at, vel exercitationem minima ab ipsum nam odit sunt facilis
-                        eveniet
-                        neque beatae? Architecto sunt accusantium tenetur ab error excepturi, nulla numquam quia
-                        ipsa earum tempora autem amet neque id dignissimos recusandae illum harum praesentium,
-                        aliquam voluptas temporibus sint illo officiis vitae! Nemo asperiores vero, quidem
-                        pariatur
-                        repellat ducimus iure. Quae, eaque voluptatibus et ipsam facere quos molestias tempora
-                        illo
-                        enim praesentium cupiditate laborum assumenda nisi. Possimus, commodi eveniet. Magni
-                        necessitatibus consequuntur aspernatur, dicta tempore commodi modi illum quo officiis
-                        laborum iste praesentium explicabo cupiditate?</p>
+                    <img src="https://i.redd.it/yt36dwb10jhb1.gif" alt="">
                 </div>
 
 
