--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>pin's digital dwelling: index</title>
     <link rel="shortcut icon" href="/resource/macaroon.png" type="image/png">
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="/style/famfamfam-silk.css">
@@ -14,10 +14,18 @@
 
 <body>
     <nav>
-        TODO
+        <span>im so navigate they call me the cartographer:</span>
+        <a href="/index.html">index page</a>
+        <a href="/about_me.html">about me</a>
+        <a href="/contact_me.html">contact me</a>
     </nav>
     <header>
-        <img src="/resource/placeholder_HELLO_REPLACE_ME_PLS.png" alt="TODO" id="header_banner_image">
+        <!--https://internet-janitor.itch.io/wigglypaint-->
+        <a href="/index.html"><img src="/resource/banner.gif" alt="TODO" id="header_banner_image"></a>
+        <p><small>
+            pin they/them<br>
+            "<span id="quote_span">i wish the quotes worked</span>"
+        </small></p>
     </header>
     <main>
         <div class="box_holder">
@@ -25,10 +33,21 @@
                 <div class="titlebar">
                     <div class="famfamfam-silk house"></div> welcome!
                 </div>
-                <div class="main">
+                <div class="main" style="position: relative;">
+                    <img src="/resource/chr4.png" width="191px" id="index_trinklet" alt="">
                     <h1>welcome</h1>
                     <p>welcome, digital traveler, to my humble dwelling in the world of the <b class="blink">internet</b>!</p>
+                    <p>
+                        you youngsters with your fancy straw pages and pronoun pages and git hubs.
+                        well, <i>back in my day</i>, everyone who dared to use the wide web for any purpose 
+                        other than chatting on irc would need to create their own site. that site would be known
+                        as a <b>homepage</b>. a place to express yourself, share your interests in hope
+                        of finding new friends and impressing your geeky classmates. <small>and of course to dump all
+                        your unfinished stuff and todo lists but that would be hidden under a bazillion layers
+                        of subpaths.</small>
+                    </p>
                     <p>here you will be able to find out about me, what i do, what im interested in and how to get in touch with me!</p>
+                    <p><div class="famfamfam-silk lightbulb"></div><small><span class="blink">pro tip</span>: use the navigation bar at the top to get to the subpages!</small><div class="famfamfam-silk lightbulb"></div></p>
                 </div>
             </div>
             <div class="box">
@@ -36,11 +55,18 @@
                     <div class="famfamfam-silk picture"></div> shitpost of the day&trade;
                 </div>
                 <div class="main">
-                    <img src="https://i.redd.it/yt36dwb10jhb1.gif" alt="">
+                    <img src="" alt="shitpost of the day" id="shitpost_img" width="255" height="191">
                 </div>
-
-
             </div>
+            <small>this is the 4th revision i struggle trough, i hope it sticks finally. commit <span id="commit_hash">[]</span>@<span id="commit_date">[]</span>: <span id="commit_message">[]</span></small>
+            <br><br>
+            <img src="/resource/button/nb_noproblem.jpg" alt="no binary? no problem!">
+            <img src="/resource/button/anydamn.gif" alt="any damn browser">
+            <a href="https://modrinth.com/" target="_blank" rel="noopener noreferrer"><img src="/resource/button/modrinth.gif" alt="modrinth"></a>
+            <a href="https://openjdk.org/index.html" target="_blank" rel="noopener noreferrer"><img src="/resource/button/get_java_green_button.gif" alt="java, get it now"></a>
+            <a href="https://foxfan.neocities.org/" target="_blank" rel="noopener noreferrer"><img src="/resource/button/foxfan.gif" alt="fox fan"></a>
+            <img src="/resource/button/html.gif" alt="hey you! learn HTML, now!">
+            <img src="/resource/button/bi_bev.png" alt="bisexual">
         </div>
     </main>
 
