its prolly done, ready to merge

--- a/about_me.html
+++ b/about_me.html
@@ -16,6 +16,7 @@
         <a href="/index.html">index page</a>
         <a href="/about_me.html">about me</a>
         <a href="/contact_me.html">contact me</a>
+        <a href="/misc.html">misc</a>
     </nav>
     <header>
         <a href="/index.html"><img src="/resource/banner.gif" alt="TODO" id="header_banner_image"></a>
@@ -75,6 +76,7 @@
                     <h3 id="dumb-little-tools-for-no-reason-at-all">dumb little tools for no reason at all</h3>
                     <ul>
                     <li>mcfetch <a href="https://pinmacaroon.github.io/mcfetch"><img src="https://img.shields.io/badge/mcfetch-visit_from_browser-green?style=plastic" alt="Static Badge"></a> <a href="https://github.com/pinmacaroon/mcfetch"><img src="https://img.shields.io/github/last-commit/pinmacaroon/mcfetch?display_timestamp=committer&amp;logo=github&amp;logoColor=%23181717&amp;style=plastic" alt="GitHub last commit"></a></li>
+                    <li>skinfetch <a href="/skinfetch/index.html"><img src="https://img.shields.io/badge/mcfetch-visit_from_browser-green?style=plastic" alt="Static Badge"></a></li>
                     </ul>
                 </div>
             </div>
