--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="/index.html">index page</a>
         <a href="/about_me.html">about me</a>
         <a href="/contact_me.html">contact me</a>
+        <a href="/misc.html">misc</a>
     </nav>
     <header>
         <!--https://internet-janitor.itch.io/wigglypaint-->
@@ -58,7 +59,7 @@
                     <img src="" alt="shitpost of the day" id="shitpost_img" width="255" height="191">
                 </div>
             </div>
-            <small>this is the 4th revision i struggle trough, i hope it sticks finally. commit <span id="commit_hash">[]</span>@<span id="commit_date">[]</span>: <span id="commit_message">[]</span></small>
+            <small>this is the 4th revision i struggle trough, i hope it sticks finally.</small>
             <br><br>
             <img src="/resource/button/nb_noproblem.jpg" alt="no binary? no problem!">
             <img src="/resource/button/anydamn.gif" alt="any damn browser">
